# yamu-android

./: .gitignore  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/okhsunrog/yamu/: DownloadService.kt  DownloaderApp.kt  LyricsPublisher.kt  MainActivity.kt  NativeBridge.java  SettingsStore.kt  TokenStore.java  TrackPublisher.kt
app/src/main/java/dev/okhsunrog/yamusdownloader/: DownloadService.kt  DownloaderApp.kt  MainActivity.java  MainActivity.kt  NativeBridge.java  SettingsStore.kt  TokenStore.java  TrackPublisher.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml  shortcuts.xml
app/src/test/java/dev/okhsunrog/yamu/: DownloadSummaryTest.kt  LyricsPublisherTest.kt  MainActivityTest.kt
docs/: RELINKING.md
native/: Cargo.toml
native/src/: lib.rs
scripts/: build-rust.sh
