[package]
name = "yamu-native"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
publish = false

[lib]
name = "yamu_native"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["build", "build-pic", "build-lib-mp3lame", "codec", "filter", "format", "software-resampling"] }
jni = "0.22.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
rustls-platform-verifier = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
yamu = { version = "=0.1.1", default-features = false, features = ["oauth", "downloader", "lyrics", "media-ffmpeg"] }

[patch.crates-io]
ffmpeg-sys-next = { path = "../vendor/ffmpeg-sys-next" }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
# Every JNI export uses EnvUnowned::with_env, which catches unwind panics and
# converts them to Java exceptions instead of unwinding across the FFI boundary.
panic = "unwind"
strip = "symbols"
